// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should change disabled attribute 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
  <label
    class="placeholder"
  >
    Test placeholder
  </label>
</div>
`;

exports[`TextInput should change disabled attribute 2`] = `
<div
  class="container disabled"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input disabled"
        disabled=""
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
  <label
    class="placeholder disabled"
  >
    Test placeholder
  </label>
</div>
`;

exports[`TextInput should execute onBlur callback when blur focus 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should execute onChange callback when typing 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment centered"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      >
        Test value
      </div>
      <input
        autocomplete="off"
        class="input filled"
        spellcheck="false"
        type="text"
        value="Test value"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should execute onFocus callback on click textInput 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly on external value update 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment centered"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      >
        123
      </div>
      <input
        autocomplete="off"
        class="input filled"
        spellcheck="false"
        type="text"
        value="123"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with attributes 1`] = `
<div
  class="test-class container"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        id="test-id"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with autoFocus prop 1`] = `
<div
  class="container focused active"
  data-qa="TextInput"
>
  <div
    class="inputSegment centered"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input active"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with disabled prop 1`] = `
<div
  class="container disabled"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input disabled"
        disabled=""
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
  <label
    class="placeholder disabled"
  >
    Test placeholder
  </label>
</div>
`;

exports[`TextInput should render correctly with icon prop 1`] = `
<div
  class="container with-icon"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
  <span
    class="icon container size-20 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Menu"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 5h12M4 10h12M4 15h12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </span>
</div>
`;

exports[`TextInput should render correctly with invalid prop 1`] = `
<div
  class="container invalid"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input invalid"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with loading prop 1`] = `
<div
  class="container with-icon"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
  <span
    class="icon container size-20"
    data-qa="Spinner"
  >
    <svg
      class="svg"
      viewBox="0 0 150 150"
    >
      <circle
        class="circle circle-1"
        cx="75"
        cy="75"
        r="60"
      />
      <circle
        class="circle circle-2"
        cx="75"
        cy="75"
        r="60"
      />
    </svg>
  </span>
</div>
`;

exports[`TextInput should render correctly with no props 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with placeholder prop 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
  <label
    class="placeholder"
  >
    Test placeholder
  </label>
</div>
`;

exports[`TextInput should render correctly with postfix prop 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment centered"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      >
        100
      </div>
      <input
        autocomplete="off"
        class="input filled"
        spellcheck="false"
        type="text"
        value="100"
      />
      <div
        class="inputPostfix"
      >
         
        ₽
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with readOnly prop 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment centered"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      >
        Test value
      </div>
      <input
        autocomplete="off"
        class="input filled"
        readonly=""
        spellcheck="false"
        type="text"
        value="Test value"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with type prop 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      />
      <input
        autocomplete="off"
        class="input"
        spellcheck="false"
        type="email"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput should render correctly with value prop 1`] = `
<div
  class="container"
  data-qa="TextInput"
>
  <div
    class="inputSegment centered"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="inputValue"
      >
        Test text
      </div>
      <input
        autocomplete="off"
        class="input filled"
        spellcheck="false"
        type="text"
        value="Test text"
      />
    </div>
  </div>
</div>
`;
